# deepmore

./: README.md  TODO.md  design.md
.kiro/specs/cap-agent-tool-loop/: .config.kiro  design.md  requirements.md  tasks.md
DeepSeek-TUI/: .env.example  .mailmap  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_GRAPH.md  Dockerfile  LICENSE  PROMPT_ANALYSIS.md  README.md  README.zh-CN.md  SECURITY.md  TAKEOVER_PROMPT.md  V086_BRIEF.md  config.example.toml
DeepSeek-TUI/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
DeepSeek-TUI/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
DeepSeek-TUI/.github/workflows/: auto-tag.yml  ci.yml  nightly.yml  release.yml  spam-lockdown.yml  stale.yml  triage.yml
DeepSeek-TUI/crates/agent/: Cargo.toml
DeepSeek-TUI/crates/agent/src/: lib.rs
DeepSeek-TUI/crates/app-server/: Cargo.toml
DeepSeek-TUI/crates/app-server/src/: lib.rs  main.rs
DeepSeek-TUI/crates/cli/: Cargo.toml  build.rs
DeepSeek-TUI/crates/cli/src/: lib.rs  main.rs  metrics.rs  update.rs
DeepSeek-TUI/crates/config/: Cargo.toml
DeepSeek-TUI/crates/config/src/: lib.rs
DeepSeek-TUI/crates/core/: Cargo.toml
DeepSeek-TUI/crates/core/src/: lib.rs
DeepSeek-TUI/crates/execpolicy/: Cargo.toml
DeepSeek-TUI/crates/execpolicy/src/: bash_arity.rs  lib.rs
DeepSeek-TUI/crates/hooks/: Cargo.toml
DeepSeek-TUI/crates/hooks/src/: lib.rs
DeepSeek-TUI/crates/mcp/: Cargo.toml
DeepSeek-TUI/crates/mcp/src/: lib.rs
DeepSeek-TUI/crates/protocol/: Cargo.toml
DeepSeek-TUI/crates/protocol/src/: lib.rs
DeepSeek-TUI/crates/protocol/tests/: parity_protocol.rs
DeepSeek-TUI/crates/secrets/: Cargo.toml
DeepSeek-TUI/crates/secrets/src/: lib.rs
DeepSeek-TUI/crates/state/: Cargo.toml
DeepSeek-TUI/crates/state/src/: lib.rs
DeepSeek-TUI/crates/state/tests/: parity_state.rs
DeepSeek-TUI/crates/tools/: Cargo.toml
DeepSeek-TUI/crates/tools/src/: lib.rs
DeepSeek-TUI/crates/tools/tests/: parity_tools.rs
DeepSeek-TUI/crates/tui/: Cargo.toml  build.rs
DeepSeek-TUI/crates/tui-core/: Cargo.toml
DeepSeek-TUI/crates/tui-core/src/: lib.rs
DeepSeek-TUI/crates/tui-core/tests/: snapshot.rs
DeepSeek-TUI/crates/tui/src/: acp_server.rs  audit.rs  auto_reasoning.rs  automation_manager.rs  client.rs  command_safety.rs  compaction.rs  composer_history.rs  composer_stash.rs  config.rs  config_ui.rs  cost_status.rs  cycle_manager.rs  deepseek_theme.rs  error_taxonomy.rs  eval.rs  features.rs  handoff.rs  hooks.rs  localization.rs  logging.rs  main.rs  mcp.rs  mcp_server.rs  memory.rs  models.rs  network_policy.rs  palette.rs  pricing.rs  project_context.rs  project_doc.rs  prompts.rs  retry_status.rs  runtime_api.rs  runtime_threads.rs  schema_migration.rs  seam_manager.rs  session_manager.rs  settings.rs  skill_state.rs  (+5 more)
DeepSeek-TUI/crates/tui/src/client/: chat.rs
DeepSeek-TUI/crates/tui/src/commands/: anchor.rs  attachment.rs  config.rs  core.rs  cycle.rs  debug.rs  goal.rs  hooks.rs  init.rs  jobs.rs  mcp.rs  memory.rs  mod.rs  network.rs  note.rs  provider.rs  queue.rs  rename.rs  restore.rs  review.rs  session.rs  share.rs  skills.rs  stash.rs  task.rs  user_commands.rs
DeepSeek-TUI/crates/tui/src/core/: capacity.rs  capacity_memory.rs  coherence.rs  engine.rs  events.rs  mod.rs  ops.rs  session.rs  tool_parser.rs  turn.rs
DeepSeek-TUI/crates/tui/src/execpolicy/: amend.rs  decision.rs  execpolicycheck.rs  matcher.rs  mod.rs  parser.rs  policy.rs  rule.rs  rules.rs
DeepSeek-TUI/crates/tui/src/llm_client/: mock.rs  mod.rs
DeepSeek-TUI/crates/tui/src/lsp/: client.rs  diagnostics.rs  mod.rs  registry.rs
DeepSeek-TUI/crates/tui/src/modules/: mod.rs  text.rs
DeepSeek-TUI/crates/tui/src/prompts/: agent.txt  base.md  base.txt  compact.md  cycle_handoff.md  normal.txt  plan.txt  subagent_output_format.md  yolo.txt
DeepSeek-TUI/crates/tui/src/repl/: mod.rs  runtime.rs  sandbox.rs
DeepSeek-TUI/crates/tui/src/rlm/: bridge.rs  mod.rs  prompt.rs  turn.rs
DeepSeek-TUI/crates/tui/src/sandbox/: backend.rs  landlock.rs  mod.rs  opensandbox.rs  policy.rs  seatbelt.rs  windows.rs
DeepSeek-TUI/crates/tui/src/skills/: install.rs  mod.rs  system.rs
DeepSeek-TUI/crates/tui/src/snapshot/: mod.rs  paths.rs  prune.rs  repo.rs
DeepSeek-TUI/crates/tui/src/tools/: apply_patch.rs  approval_cache.rs  arg_repair.rs  automation.rs  diagnostics.rs  diff_format.rs  fetch_url.rs  file.rs  file_search.rs  fim.rs  finance.rs  git.rs  git_history.rs  github.rs  large_output_router.rs  mod.rs  parallel.rs  plan.rs  project.rs  recall_archive.rs  registry.rs  remember.rs  revert_turn.rs  review.rs  rlm.rs  schema_sanitize.rs  search.rs  shell.rs  shell_output.rs  skill.rs  spec.rs  tasks.rs  test_runner.rs  todo.rs  tool_result_retrieval.rs  truncate.rs  user_input.rs  validate_data.rs  web_run.rs  web_search.rs
DeepSeek-TUI/crates/tui/tests/: README.md  eval_harness.rs  integration_mock_llm.rs  palette_audit.rs  protocol_recovery.rs  qa_pty.rs  skill_install.rs
DeepSeek-TUI/docs/: ARCHITECTURE.md  CONFIGURATION.md  DOCKER.md  INSTALL.md  KEYBINDINGS.md  LOCALIZATION.md  MODES.md  OPERATIONS_RUNBOOK.md  RUNTIME_API.md  SUBAGENTS.md  TOOL_SURFACE.md
DeepSeek-TUI/docs/archive/: V0_7_5_IMPLEMENTATION_PLAN.md
DeepSeek-TUI/npm/deepseek-tui/: .gitignore  README.md  package.json
DeepSeek-TUI/npm/deepseek-tui/scripts/: artifacts.js  install.js  preflight-glibc.js  run.js  verify-release-assets.js
DeepSeek-TUI/npm/deepseek-tui/test/: install.test.js  run.test.js
DeepSeek-TUI/scripts/release/: check-published.sh  check-versions.sh  crates.sh  npm-wrapper-smoke.js  prepare-local-release-assets.js  publish-crates.sh  verify-workspace-version.sh
DeepSeek-TUI/website/: index.html
DeepSeek-TUI/website/zh/: index.html
deepseek-agent/: .env.example  README.md  agent.ts  index.ts  lark.ts  package.json
deepseek-telegram-agent/: .env.example  README.md  agent.legacy.ts  agent.ts  batcher.ts  index.ts  package.json  tools.ts
log/: .gitignore  logger.ts
vox/: .gitignore  README.md  index.ts  package.json
(+98 files in other folders)
