[package]
name = "deepseek-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config schema and precedence model for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
deepseek-secrets = { path = "../secrets", version = "0.8.17" }
dirs.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
