[package]
name = "deepseek-execpolicy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Execution policy and approval model parity for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
deepseek-protocol = { path = "../protocol", version = "0.8.17" }
serde.workspace = true
