[package]
name = "deepseek-state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Session/thread persistence and recovery model for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
