[package]
name = "deepseek-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool invocation lifecycle, schema validation, and scheduler parallelism for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
deepseek-protocol = { path = "../protocol", version = "0.8.17" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
